<resources>
    <string name="app_name">My Application</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="synopsis">synopsis</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Name">Name</string>
    <string name="name">Name</string>
    <string name="release">Release</string>
    <string name="overview">Overview</string>
</resources>